url-shortener/gitops/base/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
  labels:
    app: url-shortener
    role: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
      role: backend
  template:
    metadata:
      labels:
        app: url-shortener
        role: backend
    spec:
      topologySpreadConstraints:
        - topologyKey: kubernetes.io/hostname
          maxSkew: 1
          whenUnsatisfiable: DoNotSchedule
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: ghcr.io/gilbertocunha/system-design:url-shortener-backend-git-sha-placeholder
          # Prevent privilege escalation
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 200Mi
          # Define readiness and liveness conditions
          # using probes
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            periodSeconds: 10
            httpGet:
              path: /healthz
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
  labels:
    app: url-shortener
    role: backend
spec:
  type: ClusterIP
  selector:
    app: url-shortener
    role: backend
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  parentRefs:
    - name: gw-internal-dev
      namespace: gateway-system
      sectionName: http
  hostnames:
    - url-shortener.dev.k8s.homelab.grncunha.com
  rules:
    - backendRefs:
        - name: url-shortener-backend
          port: 8080
