url-shortener/gitops/base/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-db-lb
  labels:
    grncunha.com/project: url-shortener
    grncunha.com/service: db
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster

  selector:
    cnpg.io/cluster: url-shortener-db
    cnpg.io/instanceRole: primary
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-db-clients
  labels:
    grncunha.com/project: url-shortener
    grncunha.com/service: db
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: url-shortener-db
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
